--- a/views/pages/homepage.ejs
+++ b/views/pages/homepage.ejs
@@ -13,7 +13,7 @@
             <nav class="navbar navbar-inverse">
                 <div class="container-fluid">
                     <div class="navbar-header">
-                        <a class="navbar-brand" href="/"><span style="color: #c07f0f">LARP<span
+                        <a class="navbar-brand" href="/"><span style="color: #c07f0f">LEAK<span
                                     style="color: #FFFFFF">BIN</span></span></a>
                     </div>
                     <ul class="nav navbar-nav">
@@ -98,7 +98,7 @@
                         <h4><b><a class="text-center-color"
                                     href="https://www.youtube.com/watch?v=xvFZjo5PgG0&pp=ygUJcmljayByb2xs"
                                     rel="norefferer" target="_blank">Official
-                                    LarpBin
+                                    LeakBin
                                     Telegram</a></b></h4><br>
                     </div>
 
