--- a/views/pages/signup.ejs
+++ b/views/pages/signup.ejs
@@ -10,7 +10,7 @@
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="/"><span style="color: #c07f0f">LARP<span
+                <a class="navbar-brand" href="/"><span style="color: #c07f0f">LEAK<span
                             style="color: #FFFFFF">BIN</span></span></a>
             </div>
             <ul class="nav navbar-nav">
