--- a/views/pages/users.ejs
+++ b/views/pages/users.ejs
@@ -11,7 +11,7 @@
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="/"><span style="color: #c07f0f">LARP<span
+                    <a class="navbar-brand" href="/"><span style="color: #c07f0f">LEAK<span
                                 style="color: #FFFFFF">BIN</span></span></a>
                 </div>
                 <ul class="nav navbar-nav">
@@ -97,7 +97,7 @@
                         <img style="margin-bottom:12px" src="/media/icon.png" width="646px" height="180px">
                         <h4><b><a class="text-center-color" href="https://t.me/skidbinsite" rel="norefferer"
                                     target="_blank">Official
-                                    LarpBin
+                                    LeakBin
                                     Telegram</a></b></h4><br>
                     </div>
 
