Feat: Comment/User deletion

--- a/views/pages/search.ejs
+++ b/views/pages/search.ejs
@@ -46,7 +46,7 @@
             <nav class="navbar navbar-inverse">
                 <div class="container-fluid">
                     <div class="navbar-header">
-                        <a class="navbar-brand" href="/"><span style="color: #c07f0f">LEAK<span
+                        <a class="navbar-brand" href="/"><span style="color: #c07f0f">LARP<span
                                     style="color: #FFFFFF">BIN</span></span></a>
                     </div>
                     <ul class="nav navbar-nav">
@@ -89,7 +89,7 @@
                     <img style="margin-bottom:12px" src="/media/icon.png" width="646px" height="180px">
                     <h4><b><a class="text-center-color" href="https://t.me/skidbinsite" rel="norefferer"
                                 target="_blank">Official
-                                LeakBin
+                                LarpBin
                                 Telegram</a></b></h4><br>
                 </div>
 
