--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LeakBin</title>
+    <title>LarpBin</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css>
 <script src=" https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js">
@@ -9,7 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="https://www.hCaptcha.com/1/api.js" async="" defer=""></script>
     <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/LeakBin.css">
+    <link rel="stylesheet" href="/css/LarpBin.css">
     <link rel="icon" href="/Media/favicon.ico" type="image/x-icon">
     <link rel="icon" type="image/png" sizes="16x16" href="/Media/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/Media/favicon-32x32.png">
