Fix: Media root

--- a/views/pages/homepage.ejs
+++ b/views/pages/homepage.ejs
@@ -94,7 +94,7 @@
                     </div>
 
                     <div class="text-center">
-                        <img style="margin-bottom:12px" src="/media/icon.png" width="646px" height="180px">
+                        <img style="margin-bottom:12px" src="/Media/Icon.png" width="646px" height="180px">
                         <h4><b><a class="text-center-color"
                                     href="https://www.youtube.com/watch?v=xvFZjo5PgG0&pp=ygUJcmljayByb2xs"
                                     rel="norefferer" target="_blank">Official
