--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -55,7 +55,7 @@
 
             .profile-header {
                 background: linear-gradient(rgba(17, 17, 17, 0.7), rgba(0, 0, 0, 0.7)),
-                    url('<%= user.banner || "/media/default_banner.jpg" %>') no-repeat center;
+                    url('<%= user.banner || "/Media/default_banner.jpg" %>') no-repeat center;
                 background-size: cover;
                 padding: 20px;
                 border-top-left-radius: 8px;
@@ -318,7 +318,7 @@
                         <div class="profile-header">
                             <div class="profile-info">
                                 <div class="profile-img">
-                                    <img src="<%= user.profile_picture || '/media/default_profile.jpg' %>"
+                                    <img src="<%= user.profile_picture || '/Media/default_profile.jpg' %>"
                                         alt="Profile Picture">
                                 </div>
                                 <h5>
