--- a/views/pages/search.ejs
+++ b/views/pages/search.ejs
@@ -86,7 +86,7 @@
                 </div>
 
                 <div class="text-center">
-                    <img style="margin-bottom:12px" src="/media/icon.png" width="646px" height="180px">
+                    <img style="margin-bottom:12px" src="/Media/Icon.png" width="646px" height="180px">
                     <h4><b><a class="text-center-color" href="https://t.me/skidbinsite" rel="norefferer"
                                 target="_blank">Official
                                 LarpBin
