--- a/views/pages/users.ejs
+++ b/views/pages/users.ejs
@@ -94,7 +94,7 @@
                 </div>
                 <div class="container">
                     <div class="text-center">
-                        <img style="margin-bottom:12px" src="/media/icon.png" width="646px" height="180px">
+                        <img style="margin-bottom:12px" src="/Media/Icon.png" width="646px" height="180px">
                         <h4><b><a class="text-center-color" href="https://t.me/skidbinsite" rel="norefferer"
                                     target="_blank">Official
                                     LarpBin
