Fix css directory

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,7 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="https://www.hCaptcha.com/1/api.js" async="" defer=""></script>
     <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/LarpBin.css">
+    <link rel="stylesheet" href="/css/larpbin.css">
     <link rel="icon" href="/Media/favicon.ico" type="image/x-icon">
     <link rel="icon" type="image/png" sizes="16x16" href="/Media/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/Media/favicon-32x32.png">
